tipi di ritorno di funzioni

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ codice/l09/indovina/indovina
 codice/230_liste_collegate/azzeramento-lista/azzeramento-lista
 codice/l10/20220118-pratica-parziale/frequenze
 codice/l10/20220131-pratica-totale/esami
+codice/070_funzioni/logo
