--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ codice/230_liste_collegate/azzeramento-lista/azzeramento-lista
 codice/l10/20220118-pratica-parziale/frequenze
 codice/l10/20220131-pratica-totale/esami
 codice/070_funzioni/logo
+codice/l05/crea_numeri
+codice/l05/stampa_numeri
