--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ codice/l10/20220131-pratica-totale/esami
 codice/070_funzioni/logo
 codice/l05/crea_numeri
 codice/l05/stampa_numeri
+codice/l07/campo
