--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ codice/070_funzioni/logo
 codice/l05/crea_numeri
 codice/l05/stampa_numeri
 codice/l07/campo
+codice/160_argomenti_linea_comando/copia
+codice/160_argomenti_linea_comando/stampa
+codice/160_argomenti_linea_comando/stampafile
