--- a/codice/160_argomenti_linea_comando/.vscode/launch.json
+++ b/codice/160_argomenti_linea_comando/.vscode/launch.json
@@ -8,8 +8,11 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
-            "args": [],
+            "program": "${workspaceFolder}/copia",
+            "args": [
+                "arg.c",
+                "arg2.c"
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
@@ -28,6 +31,5 @@
                 }
             ]
         }
-
     ]
 }
