--- a/codice/210_liste_sequenziali/lista-ordinata/.vscode/launch.json
+++ b/codice/210_liste_sequenziali/lista-ordinata/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
-            "args": ["interi.dat", "interi_copia.dat"],
+            "program": "${workspaceFolder}/lista_ordinata",
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
