--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ codice/l07/campo
 codice/160_argomenti_linea_comando/copia
 codice/160_argomenti_linea_comando/stampa
 codice/160_argomenti_linea_comando/stampafile
+esami/2017-01-30-turno1/calorie
+esami/2017-01-30-turno1/stampa/stampafile
+esami/2017-01-30-turno1/stampa/stampafile-array
