soluzione con lista sequenziale

--- a/esami/2017-01-30-turno1/.vscode/launch.json
+++ b/esami/2017-01-30-turno1/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/stampafile-array",
-            "args": ["calorie.dat"],
+            "program": "${workspaceFolder}/calorie",
+            "args": ["calorie.dat", "pasto.txt"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
