--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ codice/160_argomenti_linea_comando/stampafile
 esami/2017-01-30-turno1/calorie
 esami/2017-01-30-turno1/stampa/stampafile
 esami/2017-01-30-turno1/stampa/stampafile-array
+esami/20200203/palestra
