--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ esami/2017-01-30-turno1/calorie
 esami/2017-01-30-turno1/stampa/stampafile
 esami/2017-01-30-turno1/stampa/stampafile-array
 esami/20200203/palestra
+esami/esame-programmazione-2024-01-19/riepilogo
